--- a/index.html
+++ b/index.html
@@ -1,96 +1,113 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Troop 586</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="troop 586 tipp city, ohio">
-        <meta name="keywords" content="boy scouts, troop website, troop 586, BSA troop 586, boy scouts tipp city, ohio">
-        <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
-        <link rel="stylesheet" href="./assets/css/style.css">
-    </head>
-    <body>
-        <header>            
-            <div id="mySidenav" class="sidenav">
-                <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                <a href="index.html">Home</a>   
-                <a href="events.html">Events</a>           
-                <a href="photos.html">Photos</a>                
-                <a href="troop-roster.html">Troop Roster</a>
-                <a href="troop-forms.html">Troop Forms</a>
-                <a href="eagle-scouts.html">Eagle Scouts</a>
-                <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
-            </div>
-            <div id="main">
-                <span onclick="openNav()">&#9776; Menu</span>
-            </div>
-            <div class="header">
-                <h1>Be Prepared</h1>
-                <a href="./history-of-soup.html" title="History Of Soup">
-                    <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
-                </a>
-            </div>
-        </header>
-        <section class="hero">
-            <div>
-                <h1>Be Prepared</h1>
-            </div>
-            <div>
-                <img src="./assets/images/troop-logo/green-scoutlogo.png" alt="troop 586 logo" class="hero-image">
-            </div>
-            <div class="hero-cta">
-                <h2>Start Building Your<br>
-                    Future With Scouting.</h2>
-                <p>
-                    Troop 586 strives to provide many opportunities for the boys to learn new skills while enjoying their experience in Scouting. 
-                    Our goal is for every scout in the Troop to be given the opportunity to advance in rank and to achieve the highest rank in Scouting - Eagle Scout.  
-                    To date, we have produced 39 Eagle Scouts with several more set to finish either merit badges or projects to reach Eagle. 
-                    The young men in our troop are active in the National Youth Leadership Training (NYLT) and the Order of the Arrow, scouting's camping national honor society. 
-                    Our troop teaches leadership, citizenship, and self respect while camping once a month, every month.  
-                    Our troop mascot is a turtle named Soup and he is a known entity around Miami Valley. Weekly meetings take place on mondays 6:30pm at the American Legion 377 N Third St Tipp City, OH 45371.
-                </p>
-            </div>
-            <div class="links">
-                <a href="https://www.scouting.org/programs/scouts-bsa/advancement-and-awards/merit-badges/" title="Merit Badges">
-                    <img src="./assets/images/merit-badge-banner.jpg" alt="">
-                </a>
-                <a href="https://scoutbook.scouting.org/" title="Scoutbook">
-                    <img src="./assets/images/Scoutbook-Banner.png" alt="">
-                </a>
-                <a href="https://www.animatedknots.com/" title="Animated Knots">
-                    <img src="./assets/images/grog-knots-title.jpg" alt="">
-                </a>
-            </div>
-        </section>
-        <section id="contact-us" class="contact">
-            <div class="contact-info">
-                <div class="contact-form">
-                    <h3>Contact Us</h3>
-                    <form method="post" name="contactForm" data-netlify="true">
-                        <label for="contact-name">Your Name</label>
-                        <input type="text" id="contact-name" name="name" placeholder="Your Name" />
-                        <label for="contact-message">Message</label>
-                        <textarea id="contact-message" name="message" placeholder="Message"></textarea>
-                        <button type="submit" value="Send">Submit</button>
-                    </form>
-                </div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3057.8501195899034!2d-84.17397488548265!3d39.967103590787126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883f7a3092ed82d7%3A0xb6506f01a9283bed!2s377%20N%203rd%20St%2C%20Tipp%20City%2C%20OH%2045371!5e0!3m2!1sen!2sus!4v1640971202160!5m2!1sen!2sus" 
-                    width="600" 
-                    height="450" 
-                    style="border:0; box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);" 
-                    allowfullscreen="" 
-                    loading="lazy">
-                </iframe>
-            </div>    
-        </section>
-        <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
-        <footer>
-            <p class="slogan">NOT FOR THE FAINT OF HEART&trade;</p>
-            <p>&copy;Troop 586 Tipp City, Ohio 2022</p>
-            <p><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></p>
-            <p>Special thanks to <a href="https://alpost586.org/">American Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
-        </footer>
-        <script src="./assets/js/script.js"></script>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Troop 586</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="troop 586 tipp city, ohio">
+    <meta name="keywords" content="boy scouts, troop website, troop 586, BSA troop 586, boy scouts tipp city, ohio">
+    <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="./assets/css/style.css">
+  </head>
+  <body>
+    <header>            
+      <div class="logo">
+        <img src="./assets/images/troop-logo/green-scoutlogo.png" alt="troop 586 logo">
+      </div>
+      <div class="motto">
+        <h1>Be Prepared</h1>
+      </div>
+      <div class="soup-the-turtle">
+        <a href="./history-of-soup.html" title="History Of Soup">
+            <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
+        </a>
+      </div>
+    </header>
+    <nav>
+      <div class="nav-menu">
+        <a href="index.html">Home</a>   
+        <a href="events.html">Events</a>           
+        <a href="photos.html">Photos</a>                
+        <a href="troop-roster.html">Troop Roster</a>
+        <a href="troop-forms.html">Troop Forms</a>
+        <a href="eagle-scouts.html">Eagle Scouts</a>
+        <a href="https://troop586.com/index/#contact-us">Contact Us</a>
+      </div>
+    </nav>
+    <section>
+      <div id="myMobilenav" class="mobilenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">Home</a>   
+        <a href="events.html">Events</a>           
+        <a href="photos.html">Photos</a>                
+        <a href="troop-roster.html">Troop Roster</a>
+        <a href="troop-forms.html">Troop Forms</a>
+        <a href="eagle-scouts.html">Eagle Scouts</a>
+        <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
+      </div>
+      <div id="main">
+        <span onclick="openNav()">&#9776; Menu</span>
+      </div>
+    </section>
+    <section>
+      <div class="troop-photo">
+          <img src="./assets/images/Summer_Camp22/summer3-3.jpg" alt="">
+      </div>
+    </section>
+    <section class="hero">
+      <div class="hero-cta">
+        <h2>Start Building Your<br>
+            Future With Scouting.</h2>
+        <p>
+            Troop 586 strives to provide many opportunities for the boys to learn new skills while enjoying their experience in Scouting. 
+            Our goal is for every scout in the Troop to be given the opportunity to advance in rank and to achieve the highest rank in Scouting - Eagle Scout.  
+            To date, we have produced 39 Eagle Scouts with several more set to finish either merit badges or projects to reach Eagle. 
+            The young men in our troop are active in the National Youth Leadership Training (NYLT) and the Order of the Arrow, scouting's camping national honor society. 
+            Our troop teaches leadership, citizenship, and self respect while camping once a month, every month.  
+            Our troop mascot is a turtle named Soup and he is a known entity around Miami Valley. Weekly meetings take place on mondays 6:30pm at the American Legion 377 N Third St Tipp City, OH 45371.
+        </p>
+      </div>
+      <div class="links">
+        <a href="https://www.scouting.org/programs/scouts-bsa/advancement-and-awards/merit-badges/" title="Merit Badges">
+            <img src="./assets/images/merit-badge-banner.jpg" alt="">
+        </a>
+        <a href="https://scoutbook.scouting.org/" title="Scoutbook">
+            <img src="./assets/images/Scoutbook-Banner.png" alt="">
+        </a>
+        <a href="https://www.animatedknots.com/" title="Animated Knots">
+            <img src="./assets/images/grog-knots-title.jpg" alt="">
+        </a>
+      </div>
+    </section>
+    <section id="contact-us" class="contact">
+      <div class="contact-info">
+        <div class="contact-form">
+          <h3>Contact Us</h3>
+          <form method="post" name="contactForm" data-netlify="true">
+            <label for="contact-name">Your Name</label>
+            <input type="text" id="contact-name" name="name" placeholder="Your Name" />
+            <label for="contact-message">Message</label>
+            <textarea id="contact-message" name="message" placeholder="Message"></textarea>
+            <button type="submit" value="Send">Submit</button>
+          </form>
+        </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3057.8501195899034!2d-84.17397488548265!3d39.967103590787126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883f7a3092ed82d7%3A0xb6506f01a9283bed!2s377%20N%203rd%20St%2C%20Tipp%20City%2C%20OH%2045371!5e0!3m2!1sen!2sus!4v1640971202160!5m2!1sen!2sus" 
+          width="600" 
+          height="450" 
+          style="border:0; box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);" 
+          allowfullscreen="" 
+          loading="lazy">
+        </iframe>
+      </div>    
+    </section>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
+    <footer>
+      <p class="slogan">NOT FOR THE FAINT OF HEART&trade;</p>
+      <p>&copy;Troop 586 Tipp City, Ohio 2022</p>
+      <p><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></p>
+      <p>Special thanks to <a href="https://alpost586.org/">American Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
+    </footer>
+    <script src="./assets/js/script.js"></script>
+  </body>
 </html>
