--- a/mum-festival.html
+++ b/mum-festival.html
@@ -1,54 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/mum-festival-style.css">
-    <title>Mum Festival</title>
-</head>
-<body>
+  <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="./assets/css/typewriter-font/stylesheet.css" type="text/css" charset="utf-8" />
+      <link rel="stylesheet" href="./assets/css/style.css">
+      <link rel="stylesheet" href="./assets/css/mum-festival-style.css">
+      <title>Mum Festival</title>
+  </head>
+  <body>
     <header>            
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="index.html">Home</a>
-        <a href="events.html">Events</a>          
+      <div class="logo">
+        <img src="./assets/images/troop-logo/green-scoutlogo.png" alt="troop 586 logo">
+      </div>
+      <div class="motto">
+        <h1>Be Prepared</h1>
+      </div>
+      <div class="soup-the-turtle">
+        <a href="./history-of-soup.html" title="History Of Soup">
+          <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
+        </a>
+      </div>
+    </header>
+    <nav>
+      <div class="nav-menu">
+        <a href="index.html">Home</a>   
+        <a href="events.html">Events</a>           
+        <a href="photos.html">Photos</a>                
+        <a href="troop-roster.html">Troop Roster</a>
+        <a href="troop-forms.html">Troop Forms</a>
+        <a href="eagle-scouts.html">Eagle Scouts</a>
+        <a href="https://troop586.com/index/#contact-us">Contact Us</a>
+      </div>
+    </nav>
+    <section>
+      <div id="myMobilenav" class="mobilenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">Home</a>   
+        <a href="events.html">Events</a>           
         <a href="photos.html">Photos</a>                
         <a href="troop-roster.html">Troop Roster</a>
         <a href="troop-forms.html">Troop Forms</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
-        </div>
-        <div id="main">
-            <span onclick="openNav()">&#9776; Menu</span>
-        </div>
-        <div class="header">
-            <h1>Be Prepared</h1>
-            <a href="./history-of-soup.html" title="History Of Soup">
-                <img src="./assets/images/soupTheTurtle.png" alt="soup the turtle">
-            </a>
-        </div>
-    </header>
-    <section class="hero">
-        <div>
-            <h1>Be Prepared</h1>
-        </div>
-        <div>
-            <img src="./assets/images/troop-logo/green-scoutlogo.png" alt="troop 586 logo" class="hero-image">
-        </div>
+      </div>
+      <div id="main">
+        <span onclick="openNav()">&#9776; Menu</span>
+      </div>
     </section>
     <section class="title">
-        <h2 class="section-title">Mum Festival</h2>
+      <h2 class="section-title">Mum Festival</h2>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
-        <p class="slogan">NOT FOR THE FAINT OF HEART&trade;</p>
-        <p>&copy;Troop 586 Tipp City, Ohio 2022</p>
-        <p><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></p>
-        <p>Special thanks to <a href="https://alpost586.org/">American Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
+      <p class="slogan">NOT FOR THE FAINT OF HEART&trade;</p>
+      <p>&copy;Troop 586 Tipp City, Ohio 2022</p>
+      <p><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></p>
+      <p>Special thanks to <a href="https://alpost586.org/">American Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
     </footer>
     <script src="./assets/js/script.js"></script>
-</body>
+  </body>
 </html>
