new screenshots, fix to events page, resized troop photo

--- a/events.html
+++ b/events.html
@@ -145,7 +145,7 @@
         </div>
         <a href="http://danbeard.org/camping/camp-friedlander-centennial/">
           <div class="eventImg">
-            <img src="./assets/images/events/friedlander.jpg" alt="camp friedlander">
+            <img src="./assets/images/events/friedlander.JPG" alt="camp friedlander">
           </div>
         </a>
       </div>
