--- a/index.html
+++ b/index.html
@@ -87,8 +87,12 @@
           <form method="post" name="contactForm" data-netlify="true">
             <label for="contact-name">Your Name</label>
             <input type="text" id="contact-name" name="name" placeholder="Your Name" />
+            <label for="email">Your Email</label>
+            <input type="email" id="contact-email" name="email" placeholder="Your Email">
+            <label for="phone">Your Phone Number</label>
+            <input type="tel" id="contact-phone" name="phone" placeholder="Your Phone Number">
             <label for="contact-message">Message</label>
-            <textarea id="contact-message" name="message" placeholder="Message"></textarea>
+            <textarea id="contact-message" name="message" placeholder="Message" rows="8"></textarea>
             <button type="submit" value="Send">Submit</button>
           </form>
         </div>
