--- a/index.html
+++ b/index.html
@@ -85,22 +85,22 @@
         <div class="contact-form">
           <h3>Contact Us</h3>
           <form method="post" name="contactForm" data-netlify="true">
-            <label for="contact-name">Your Name</label>
+            <!-- <label for="contact-name">Your Name</label> -->
             <input type="text" id="contact-name" name="name" placeholder="Your Name" />
-            <label for="email">Your Email</label>
+            <!-- <label for="email">Your Email</label> -->
             <input type="email" id="contact-email" name="email" placeholder="Your Email">
-            <label for="phone">Your Phone Number</label>
+            <!-- <label for="phone">Your Phone Number</label> -->
             <input type="tel" id="contact-phone" name="phone" placeholder="Your Phone Number">
-            <label for="contact-message">Message</label>
-            <textarea id="contact-message" name="message" placeholder="Message" rows="4"></textarea>
+            <!-- <label for="contact-message">Message</label> -->
+            <textarea id="contact-message" name="message" placeholder="Message" rows="5"></textarea>
             <button type="submit" value="Send">Submit</button>
           </form>
         </div>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3057.8501195899034!2d-84.17397488548265!3d39.967103590787126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883f7a3092ed82d7%3A0xb6506f01a9283bed!2s377%20N%203rd%20St%2C%20Tipp%20City%2C%20OH%2045371!5e0!3m2!1sen!2sus!4v1640971202160!5m2!1sen!2sus" 
-          width="600" 
+          <!-- width="600" 
           height="450" 
           style="border:0; box-shadow: 0 0 18px rgba(0, 0, 0, 0.7);" 
-          allowfullscreen="" 
+          allowfullscreen=""  -->
           loading="lazy">
         </iframe>
       </div>    
