added adopt-a-mum section to homepage

--- a/index.html
+++ b/index.html
@@ -50,6 +50,27 @@
         <span onclick="openNav()">&#9776; Menu</span>
       </div>
     </section>
+    <section class="mumfest">
+      <div>
+        <img src="./assets/images/events/mum.jpg" alt="Mum Festival">
+      </div>
+      <div class="mum-sales">
+        <h2>Adopt-a-Mum</h2>
+        <p>
+          The Tipp City Mum Festival Committee and Troop 586 would like to offer you the opportunity to join in the celebration of the festival by adopting a mum. Troop 586 will be painting mums on the sidewalks and driveways of those wishing to adopt a mum.
+        </p>
+        <p>
+          Cost of a mum is $15*. The mums are approximately 3’x3′ and can be painted in your choice of red, white, yellow, or a combination, with or without a stem.
+        </p>
+        <p>
+          <span>
+            *Note: online orders will include a $1 convenience fee for processing.
+          </span>
+        </p>
+        <a class="button" href="./assets/docs/Mum-Door-Flyer-2022 (1).pdf">Adopt-a-Mum PDF Form</a>
+        <a class="button-new" href="https://tippmumfestival.org/adopt-a-mum-payment-form/">NEW! Adopt-a-Mum ONLINE ORDER FORM</a>
+      </div>
+    </section>
     <section>
       <div class="troop-photo">
           <img src="./assets/images/troop-1280.jpg" alt="">
