updated scout ranks

--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -156,6 +156,10 @@
         <h3>2021</h3>
         <p>Dillen S.</p>
       </div>
+      <div>
+        <h3>2022</h3>
+        <p>Gavyn Mullins</p>
+      </div>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
     <footer>
