--- a/troop-forms.html
+++ b/troop-forms.html
@@ -56,6 +56,7 @@
       <div class="wrapper">
         <div class="forms">
           <h3>Troop Forms</h3>
+          <a href="./assets/docs/Reimbursement Request Form.pdf">Reimbursement Request Form</a>
           <a href="./assets/docs/Medical_ABC.pdf">Medical Forms</a>
           <a href="./assets/docs/Adult-Application.pdf">Adult Application</a>
           <a href="./assets/docs/Background-Authorization-Form.pdf">Background Authorization</a>
