--- a/troop-forms.html
+++ b/troop-forms.html
@@ -58,6 +58,7 @@
           <h3>Troop Forms</h3>
           <a href="./assets/docs/Reimbursement Request Form.pdf">Reimbursement Request Form</a>
           <a href="./assets/docs/Medical_ABC.pdf">Medical Forms</a>
+          <a href="./assets/docs/Youth-Application.pdf">Youth Application</a>
           <a href="./assets/docs/Adult-Application.pdf">Adult Application</a>
           <a href="./assets/docs/Background-Authorization-Form.pdf">Background Authorization</a>
           <a href="./assets/docs/Parent-Resource-Survey.pdf">Parent Resource Survey</a>
