changed scout name

--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -158,7 +158,7 @@
       </div>
       <div>
         <h3>2022</h3>
-        <p>Gavyn Mullins</p>
+        <p>Gavyn M.</p>
       </div>
     </section>
     <button onclick="topFunction()" id="myBtn" title="Go to top">^</button>
