changed charter organization

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             To date, we have produced 39 Eagle Scouts with several more set to finish either merit badges or projects to reach Eagle. 
             The young men in our troop are active in the National Youth Leadership Training (NYLT) and the Order of the Arrow, scouting's camping national honor society. 
             Our troop teaches leadership, citizenship, and self respect while camping once a month, every month.  
-            Our troop mascot is a turtle named Soup and he is a known entity around Miami Valley. Weekly meetings take place on mondays 6:30pm at the American Legion 377 N Third St Tipp City, OH 45371.
+            Our troop mascot is a turtle named Soup and he is a known entity around Miami Valley. Weekly meetings take place at 6:30pm on Mondays at the Miami County YMCA - Robinson Branch 3060 S Co Rd 25A Troy, OH 45373.
         </p>
       </div>
       <div class="links">
@@ -113,8 +113,8 @@
             <button type="submit" value="Send">Submit</button>
           </form>
         </div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3057.8501195899034!2d-84.17397488548265!3d39.967103590787126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x883f7a3092ed82d7%3A0xb6506f01a9283bed!2s377%20N%203rd%20St%2C%20Tipp%20City%2C%20OH%2045371!5e0!3m2!1sen!2sus!4v1640971202160!5m2!1sen!2sus" 
-          loading="lazy">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12226.425594266824!2d-84.20851528576664!3d39.99490051019091!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x15453e924704dff3!2sMiami%20County%20YMCA%20-%20Robinson%20Branch!5e0!3m2!1sen!2sus!4v1665919710021!5m2!1sen!2sus" 
+        loading="lazy">
         </iframe>
       </div>    
     </section>
@@ -123,7 +123,7 @@
       <p class="slogan">NOT FOR THE FAINT OF HEART&trade;</p>
       <p>&copy;Troop 586 Tipp City, Ohio 2022</p>
       <p><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></p>
-      <p>Special thanks to <a href="https://alpost586.org/">American Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
+      <p>Special thanks to <a href="https://miamicountyymca.net/">Miami County YMCA - Robinson Branch</a> for supporting our troop and allowing us to use their facilities.</p>
     </footer>
     <script src="./assets/js/script.js"></script>
   </body>
