--- a/troop-roster.html
+++ b/troop-roster.html
@@ -69,7 +69,7 @@
       <p class="slogan">NOT FOR THE FAINT OF HEART&trade;</p>
       <p>&copy;Troop 586 Tipp City, Ohio 2022</p>
       <p><a href="https://miamivalleybsa.org/">Miami Valley Council</a> | <a href="https://www.facebook.com/tworiversmvc/">Two Rivers District</a></p>
-      <p>Special thanks to <a href="https://alpost586.org/">American Legion Post 586</a> for supporting our troop and allowing us to use their facilities.</p>
+      <p>Special thanks to <a href="https://miamicountyymca.net/">Miami County YMCA - Robinson Branch</a> for supporting our troop and allowing us to use their facilities.</p>
     </footer>
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/troop-roster.js"></script>
