updated photos, roster, and events

--- a/photos.html
+++ b/photos.html
@@ -52,6 +52,16 @@
     </section>
     <section class="title">
       <h2 class="section-title">Photos</h2>
+    </section>
+    <section class="year">
+      <h2>Year 2023</h2>
+    </section>
+      <div class="category">
+        <a href="#gallery" onclick="renderPhotos(rlfa23)">Real Life First Aid 2023</a>
+      </div>
+    <section class="year">
+      <h2>Year 2022</h2>
+    </section>
       <div class="category">
         <a href="#gallery" onclick="renderPhotos(wb22)">Winter Bushwhack 2022</a>
         <a href="#gallery" onclick="renderPhotos(rlfa22)">Real Life First Aid 2022</a>
@@ -61,7 +71,6 @@
         <a href="#gallery" onclick="renderPhotos(md22)">Memorial Day Weekend 2022</a>
         <a href="#gallery" onclick="renderPhotos(summerCamp22)">Summer Camp 2022</a>
       </div>
-    </section>
     <section class="main">
     <div class="gallery" id="gallery"></div>       
     </section>
