--- a/troop-roster.html
+++ b/troop-roster.html
@@ -54,11 +54,9 @@
       <div class="category">
         <a href="#cards" onclick="createCards(key3)">Key 3</a>
         <a href="#cards" onclick="createCards(seniorPatrol)">SPL & ASPL</a>
-        <a href="#cards" onclick="createCards(pheonix)">Pheonix Patrol</a>
-        <a href="#cards" onclick="createCards(banananadana)">Banananadana's Patrol</a>
-        <a href="#cards" onclick="createCards(infernos)">Infernos Patrol</a>
+        <a href="#cards" onclick="createCards(fancyFishes)">Fancy Fishes Patrol</a>
         <a href="#cards" onclick="createCards(wetBandits)">Wet Bandits Patrol</a>
-        <a href="#cards" onclick="createCards(underdogs)">Underdogs Patrol</a>
+        <a href="#cards" onclick="createCards(fireChickens)">Fire Chickens Patrol</a>
         <a href="#cards" onclick="createCards(scoutMasters)">Assistant Scoutmasters</a>
         <a href="#cards" onclick="createCards(committee)">Committee Members</a>
       </div>
