--- a/history-of-soup.html
+++ b/history-of-soup.html
@@ -30,6 +30,7 @@
         <a href="troop-roster.html">Troop Roster</a>
         <a href="troop-forms.html">Troop Forms</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
+        <a href="https://drive.google.com/file/d/1tqTxGRwaPbjw1U9ot9w9jFTzJyMV-wGy/view?usp=sharing">Newsletter</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>
       </div>
     </nav>
@@ -42,6 +43,7 @@
         <a href="troop-roster.html">Troop Roster</a>
         <a href="troop-forms.html">Troop Forms</a>
         <a href="eagle-scouts.html">Eagle Scouts</a>
+        <a href="https://drive.google.com/file/d/1tqTxGRwaPbjw1U9ot9w9jFTzJyMV-wGy/view?usp=sharing">Newsletter</a>
         <a href="https://troop586.com/index/#contact-us">Contact Us</a>           
       </div>
       <div id="main">
