added photos for fishing and paddlesports

--- a/events.html
+++ b/events.html
@@ -65,7 +65,7 @@
           <h3>January</h3>
           <h4>Real Life First Aid/Monroe Grange</h4>
           <p>Real life First Aid will be held at Monroe Grange Banquet Hall Tipp City, OH. At this event the scouts are presented with real life first aid situations and have to react with proper first aid in a timely manner.</p>
-          <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
+          <a href="#gallery" onclick="renderPhotos(rlfa23)">Click here to see photos</a>
         </div>
         <a href="https://zaubee.com/biz/monroe-grange-89ivxudo">
           <div class="eventImg">
@@ -333,7 +333,7 @@
           <h3>July</h3>
           <h4>Paddle Sports/Camp Birch</h4>
           <p>The Paddle Sports main event will be held at Camp Hugh Taylor Birch in Yellow Springs, OH. The scouts go on a 5 mile canoe trip down the Mad River.</p>
-          <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
+          <a href="#gallery" onclick="renderPhotos(PS22)">Click here to see photos</a>
         </div>
         <a href="https://www.birchbarkcanoelivery.com/">
           <div class="eventImg">
@@ -346,7 +346,7 @@
           <h3>August</h3>
           <h4>Fishing/Chenoweth Trails</h4>
           <p>The Fishing main event will be held at Chenoweth Trails in Greenville, OH. The scouts put all of their fishing knowledge to the test as they attempt to catch fish (everyone catches a fish at this pond).</p>
-          <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
+          <a href="#gallery" onclick="renderPhotos(Fish22)">Click here to see photos</a>
         </div>
         <a href="https://www.mattlight72.com/about-chenoweth-trails/">
           <div class="eventImg">
