--- a/photos.html
+++ b/photos.html
@@ -72,6 +72,8 @@
         <a href="#gallery" onclick="renderPhotos(cme22)">Cycling 2022</a>
         <a href="#gallery" onclick="renderPhotos(md22)">Memorial Day Weekend 2022</a>
         <a href="#gallery" onclick="renderPhotos(summerCamp22)">Summer Camp 2022</a>
+        <a href="#gallery" onclick="renderPhotos(PS22)">Paddle Sports 2022</a>
+        <a href="#gallery" onclick="renderPhotos(Fish22)">Fishing 2022</a>
       </div>
     <section class="main">
     <div class="gallery" id="gallery"></div>       
