added more photos

--- a/events.html
+++ b/events.html
@@ -359,7 +359,7 @@
           <h3>September</h3>
           <h4>Mumfest/Tipp City</h4>
           <p>Mum Fest is the big fundraiser of the year for the scouts. Starting in August the scouts begin selling mums to be painted on driveways. September begins the painting all the way up to Mum Fest. At Mum Fest the scouts run a Cobbler Booth.</p>
-          <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
+          <a href="#gallery" onclick="renderPhotos(Mum22)">Click here to see photos</a>
         </div>
         <a href="https://tippmumfestival.org/">
           <div class="eventImg">
@@ -372,7 +372,7 @@
           <h3>October</h3>
           <h4>Shooting Sports/Camp Berry</h4>
           <p>The Shooting Sports main event will be held at Camp Berry Scout Camp in Findlay, OH. The scouts put their shooting skills to the test in Rifle, Shotgun, Archery, and Tomahawk.</p>
-          <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
+          <a href="#gallery" onclick="renderPhotos(SP22)">Click here to see photos</a>
         </div>
         <a href="http://www.blackswampbsa.org/camping/camp-berry/63302">
           <div class="eventImg">
@@ -385,7 +385,7 @@
           <h3>November</h3>
           <h4>Turkey Bowl/Redmen Picnic Grounds</h4>
           <p>Turkey Bowl will be held at the Redmen Picnic Grounds in Troy, OH. For this event the scouts spend the day cooking a Thanksgiving meal that they will share with their families that evening.</p>
-          <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
+          <a href="#gallery" onclick="renderPhotos(TB22)">Click here to see photos</a>
         </div>
         <a href="https://m.facebook.com/profile.php?id=559276214114138">
           <div class="eventImg">
@@ -398,7 +398,7 @@
           <h3>December</h3>
           <h4>Yearly Planning/Cricket Holler</h4>
           <p>The Yearly Planning event will be held at Cricket Holler Scout Camp in Dayton, OH. At this event the scouts plan all the next years events.</p>
-          <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
+          <a href="#gallery" onclick="renderPhotos(AP22)">Click here to see photos</a>
         </div>
         <a href="https://m.facebook.com/profile.php?id=171675552896093&__tn__=C-R">
           <div class="eventImg">
