--- a/photos.html
+++ b/photos.html
@@ -59,21 +59,25 @@
       <h2>Year 2023</h2>
     </section>
       <div class="category">
-        <a href="#gallery" onclick="renderPhotos(rlfa23)">Real Life First Aid 2023</a>
+        <a href="#gallery" onclick="renderPhotos(rlfa23)">Real Life First Aid</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
     </section>
       <div class="category">
-        <a href="#gallery" onclick="renderPhotos(wb22)">Winter Bushwhack 2022</a>
-        <a href="#gallery" onclick="renderPhotos(rlfa22)">Real Life First Aid 2022</a>
-        <a href="#gallery" onclick="renderPhotos(sff22)">Scouting For Food 2022</a>
-        <a href="#gallery" onclick="renderPhotos(fwlm22)">Fish & Wildlife Management 2022</a>
-        <a href="#gallery" onclick="renderPhotos(cme22)">Cycling 2022</a>
-        <a href="#gallery" onclick="renderPhotos(md22)">Memorial Day Weekend 2022</a>
-        <a href="#gallery" onclick="renderPhotos(summerCamp22)">Summer Camp 2022</a>
-        <a href="#gallery" onclick="renderPhotos(PS22)">Paddle Sports 2022</a>
-        <a href="#gallery" onclick="renderPhotos(Fish22)">Fishing 2022</a>
+        <a href="#gallery" onclick="renderPhotos(wb22)">Winter Bushwhack</a>
+        <a href="#gallery" onclick="renderPhotos(rlfa22)">Real Life First Aid</a>
+        <a href="#gallery" onclick="renderPhotos(sff22)">Scouting For Food</a>
+        <a href="#gallery" onclick="renderPhotos(fwlm22)">Fish & Wildlife Management</a>
+        <a href="#gallery" onclick="renderPhotos(cme22)">Cycling</a>
+        <a href="#gallery" onclick="renderPhotos(md22)">Memorial Day Weekend</a>
+        <a href="#gallery" onclick="renderPhotos(summerCamp22)">Summer Camp</a>
+        <a href="#gallery" onclick="renderPhotos(PS22)">Paddle Sports</a>
+        <a href="#gallery" onclick="renderPhotos(Fish22)">Fishing</a>
+        <a href="#gallery" onclick="renderPhotos(Mum22)">Mum Festival</a>
+        <a href="#gallery" onclick="renderPhotos(SP22)">Shooting Sports</a>
+        <a href="#gallery" onclick="renderPhotos(TB22)">Turkey Bowl</a>
+        <a href="#gallery" onclick="renderPhotos(AP22)">Annual Planning</a>
       </div>
     <section class="main">
     <div class="gallery" id="gallery"></div>       
