new events added

--- a/events.html
+++ b/events.html
@@ -76,8 +76,21 @@
       <div class="right">
         <div class="content">
           <h3>February</h3>
+          <h4>Pack 285 Crossover</h4>
+          <p>This event will be held at Saint John The Baptist Church in Tipp City, OH. At this event 10 new scouts will cross over from Cub Scouts to Boy Scouts. Our scouts will be there to welcome them into the troop as they cross over the symbolic bridge.</p>
+          <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
+        </div>
+        <a href="https://www.stjohntippcity.org/">
+          <div class="eventImg">
+            <img src="./assets/images/events/saint-john.jpg" alt="Saint John The Baptist Church">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
+          <h3>February</h3>
           <h4>Caving/Marengo Caves</h4>
-          <p>The Caving event will be held at Marengo Caves in Marengo, Indiana. Scouts will be camping in cabins and exploring the "wild" cave filled with mud, water, tight spaces, and all the adventure they can handle.</p>
+          <p>The Caving event will be held at Marengo Caves in Marengo, IN. Scouts will be camping in cabins and exploring the "wild" cave filled with mud, water, tight spaces, and all the adventure they can handle.</p>
           <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
         </div>
         <a href="https://marengocave.com/">
@@ -86,11 +99,11 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>March</h3>
           <h4>Scouting for Food/Tipp City</h4>
-          <p>Scouting for Food is our biggest service project of the year. This service project consists of 2 Saturdays. On the first Saturday the scouts pass out door hangers to every house in Tipp City. On the second Saturday the scouts collect all donated food items from all the houses that have sat food outside. This year we collected 2893lbs of food for Needy Baskets food pantry.</p>
+          <p>Scouting for Food is our biggest service project of the year. This service project consists of 2 Saturdays. On the first Saturday the scouts pass out door hangers to every house in Tipp City. On the second Saturday the scouts collect all donated food items from all the houses that have sat food outside. This year we collected lbs of food for Needy Baskets food pantry.</p>
           <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
         </div>
         <a href="https://miamivalleybsa.org/program/scouting-for-food/">
@@ -99,7 +112,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>April</h3>
           <h4>Backpacking/Camp Birch</h4>
@@ -112,7 +125,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>May</h3>
           <h4>Wilderness Survival/Cricket Holler</h4>
@@ -125,7 +138,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>May</h3>
           <h4>Memorial Day Weekend/Tipp City</h4>
@@ -138,7 +151,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>June</h3>
           <h4>Summer Camp/Camp Berry</h4>
@@ -151,7 +164,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>July</h3>
           <h4>Cycling/Hueston Woods</h4>
@@ -164,7 +177,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>August</h3>
           <h4>Fishing/Chenoweth Trails</h4>
@@ -177,7 +190,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>September</h3>
           <h4>Mumfest/Tipp City</h4>
@@ -190,7 +203,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>October</h3>
           <h4>Climbing-Indoors/TBD</h4>
@@ -203,7 +216,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>November</h3>
           <h4>Turkey Bowl/Redmen Picnic Grounds</h4>
@@ -216,7 +229,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>December</h3>
           <h4>Yearly Planning/TBD</h4>
@@ -394,6 +407,19 @@
         </a>
       </div>
       <div class="left">
+        <div class="content">
+          <h3>December</h3>
+          <h4>Pack 395 Crossover</h4>
+          <p>This event will be held at the United Methodist Church in Tipp City, OH. At this event 1 new scout will cross over from Cub Scouts to Boy Scouts. Our scouts will be there to welcome him into the troop as they cross over the symbolic bridge.</p>
+          <a href="#gallery" onclick="renderPhotos(co39522)">Click here to see photos</a>
+        </div>
+        <a href="https://www.umc.org/en/find-a-church/church/?id=60620">
+          <div class="eventImg">
+            <img src="./assets/images/events/united-methodist.jpg" alt="United Methodist Church">
+          </div>
+        </a>
+      </div>
+      <div class="right">
         <div class="content">
           <h3>December</h3>
           <h4>Yearly Planning/Cricket Holler</h4>
