--- a/photos.html
+++ b/photos.html
@@ -60,6 +60,7 @@
     </section>
       <div class="category">
         <a href="#gallery" onclick="renderPhotos(rlfa23)">Real Life First Aid</a>
+        <a href="#gallery" onclick="renderPhotos()">Pack 285 Crossover</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
@@ -77,6 +78,7 @@
         <a href="#gallery" onclick="renderPhotos(Mum22)">Mum Festival</a>
         <a href="#gallery" onclick="renderPhotos(SP22)">Shooting Sports</a>
         <a href="#gallery" onclick="renderPhotos(TB22)">Turkey Bowl</a>
+        <a href="#gallery" onclick="renderPhotos(co39522)">Pack 395 Crossover</a>
         <a href="#gallery" onclick="renderPhotos(AP22)">Annual Planning</a>
       </div>
     <section class="main">
