new events added

--- a/photos.html
+++ b/photos.html
@@ -77,7 +77,9 @@
         <a href="#gallery" onclick="renderPhotos(Fish22)">Fishing</a>
         <a href="#gallery" onclick="renderPhotos(Mum22)">Mum Festival</a>
         <a href="#gallery" onclick="renderPhotos(SP22)">Shooting Sports</a>
+        <a href="#gallery" onclick="renderPhotos(food22)">Food Pantry Service Project</a>
         <a href="#gallery" onclick="renderPhotos(TB22)">Turkey Bowl</a>
+        <a href="#gallery" onclick="renderPhotos(shelf22)">Shelf Building Project</a>
         <a href="#gallery" onclick="renderPhotos(co39522)">Pack 395 Crossover</a>
         <a href="#gallery" onclick="renderPhotos(AP22)">Annual Planning</a>
       </div>
