--- a/events.html
+++ b/events.html
@@ -396,6 +396,19 @@
       <div class="right">
         <div class="content">
           <h3>November</h3>
+          <h4>Food Pantry Service Project</h4>
+          <p>This service project was facilitated by Ginghamsburg Church in Tipp City, OH. For this service project our scouts were offered the opportunity to help serve food at the Mid-Ohio Food Pantry in Grove City, OH.</p>
+          <a href="#gallery" onclick="renderPhotos(food22)">Click here to see photos</a>
+        </div>
+        <a href="https://mofc.org/">
+          <div class="eventImg">
+            <img src="./assets/images/events/food-pantry.jpg" alt="Food Pantry">
+          </div>
+        </a>
+      </div>
+      <div class="left">
+        <div class="content">
+          <h3>November</h3>
           <h4>Turkey Bowl/Redmen Picnic Grounds</h4>
           <p>Turkey Bowl will be held at the Redmen Picnic Grounds in Troy, OH. For this event the scouts spend the day cooking a Thanksgiving meal that they will share with their families that evening.</p>
           <a href="#gallery" onclick="renderPhotos(TB22)">Click here to see photos</a>
@@ -403,6 +416,19 @@
         <a href="https://m.facebook.com/profile.php?id=559276214114138">
           <div class="eventImg">
             <img src="./assets/images/events/redmans.jpg" alt="redmen's lodge">
+          </div>
+        </a>
+      </div>
+      <div class="right">
+        <div class="content">
+          <h3>November</h3>
+          <h4>Shelf Building Service Project</h4>
+          <p>This service project was done for our charter organization the YMCA in Troy, OH. For this project our scouts built shelves in the outside shed.</p>
+          <a href="#gallery" onclick="renderPhotos(shelf22)">Click here to see photos</a>
+        </div>
+        <a href="https://miamicountyymca.net/robinson-branch">
+          <div class="eventImg">
+            <img src="./assets/images/events/YMCA.jpg" alt="YMCA">
           </div>
         </a>
       </div>
