added last names to aged out scouts

--- a/eagle-scouts.html
+++ b/eagle-scouts.html
@@ -146,17 +146,17 @@
         <p>Nick Hartman</p>
         <p>Aaron Davis</p>
         <p>James Ridgeway</p>
-        <p>Garret P.</p>
+        <p>Garret Piel</p>
         <p>Mason Hughes</p>
         <p>Noah Barnes</p>
       </div>
       <div>
         <h3>2020</h3>
-        <p>Leo H.</p>
+        <p>Leo Hartman</p>
       </div>
       <div>
         <h3>2021</h3>
-        <p>Dillen S.</p>
+        <p>Dillen Swartz</p>
       </div>
       <div>
         <h3>2022</h3>
