added scout sunday event

--- a/events.html
+++ b/events.html
@@ -78,7 +78,7 @@
           <h3>February</h3>
           <h4>Pack 285 Crossover</h4>
           <p>This event will be held at Saint John The Baptist Church in Tipp City, OH. At this event 10 new scouts will cross over from Cub Scouts to Boy Scouts. Our scouts will be there to welcome them into the troop as they cross over the symbolic bridge.</p>
-          <a href="#gallery" onclick="renderPhotos()">Click here to see photos</a>
+          <a href="#gallery" onclick="renderPhotos(CO28523)">Click here to see photos</a>
         </div>
         <a href="https://www.stjohntippcity.org/">
           <div class="eventImg">
@@ -87,6 +87,19 @@
         </a>
       </div>
       <div class="left">
+        <div class="content">
+          <h3>February</h3>
+          <h4>Scout Sunday</h4>
+          <p>This event will be held at United Methodist Church in Vandalia, OH. Scout Sunday is an opportunity for scouts to attend services in uniform, conduct a flag ceremony, speak about Scouting, and present religious awards.</p>
+          <a href="#gallery" onclick="renderPhotos(SS23)">Click here to see photos</a>
+        </div>
+        <a href="https://www.vandaliaunitedmethodistchurch.com/">
+          <div class="eventImg">
+            <img src="./assets/images/events/vandalia-methodist.JPG" alt="Vandalia United Methodist Church">
+          </div>
+        </a>
+      </div>
+      <div class="right">
         <div class="content">
           <h3>February</h3>
           <h4>Caving/Marengo Caves</h4>
@@ -99,7 +112,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>March</h3>
           <h4>Scouting for Food/Tipp City</h4>
@@ -112,7 +125,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>April</h3>
           <h4>Backpacking/Camp Birch</h4>
@@ -125,7 +138,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>May</h3>
           <h4>Wilderness Survival/Cricket Holler</h4>
@@ -138,7 +151,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>May</h3>
           <h4>Memorial Day Weekend/Tipp City</h4>
@@ -151,7 +164,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>June</h3>
           <h4>Summer Camp/Camp Berry</h4>
@@ -164,7 +177,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>July</h3>
           <h4>Cycling/Hueston Woods</h4>
@@ -177,7 +190,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>August</h3>
           <h4>Fishing/Chenoweth Trails</h4>
@@ -190,7 +203,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>September</h3>
           <h4>Mumfest/Tipp City</h4>
@@ -203,7 +216,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>October</h3>
           <h4>Climbing-Indoors/TBD</h4>
@@ -216,7 +229,7 @@
           </div>
         </a>
       </div>
-      <div class="left">
+      <div class="right">
         <div class="content">
           <h3>November</h3>
           <h4>Turkey Bowl/Redmen Picnic Grounds</h4>
@@ -229,7 +242,7 @@
           </div>
         </a>
       </div>
-      <div class="right">
+      <div class="left">
         <div class="content">
           <h3>December</h3>
           <h4>Yearly Planning/TBD</h4>
