--- a/photos.html
+++ b/photos.html
@@ -60,7 +60,8 @@
     </section>
       <div class="category">
         <a href="#gallery" onclick="renderPhotos(rlfa23)">Real Life First Aid</a>
-        <a href="#gallery" onclick="renderPhotos()">Pack 285 Crossover</a>
+        <a href="#gallery" onclick="renderPhotos(CO28523)">Pack 285 Crossover</a>
+        <a href="#gallery" onclick="renderPhotos(SS23)">Scout Sunday</a>
       </div>
     <section class="year">
       <h2>Year 2022</h2>
